# path_integral

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
notebooks/: path_integral_diffusion_ex1.ipynb  path_integral_diffusion_ex2.ipynb  path_integral_study.ipynb  path_integral_study_diffusion_2d.ipynb  path_integral_study_diffusion_2d_double_slit.ipynb  path_integral_study_num.ipynb  path_integral_study_num2d.ipynb  path_integral_study_num2d_double_slit.ipynb
